<resources>
    <string name="app_name">Recuperacion</string>
    <string name="introduce_email">Email</string>
    <string name="introduce_password">Password</string>
    <string name="login_bttn">Log in</string>
    <string name="other_login">Or log in with:</string>

    <string name="my_cart_icon">Mi carro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="summary">Summary</string>
    <string name="genres">Genres</string>
    <string name="release_date">Release Date</string>
</resources>